# coala-runtime

./: .gitignore  AGENTS.md  MCP_CONFIG.md  README.md  pyproject.toml
.github/workflows/: release.yml
docker/: Dockerfile.python  Dockerfile.r  README.md  build.sh
skills/: SKILL.md
src/coala_runtime/: __init__.py  __main__.py  server.py
src/coala_runtime/runtime/: __init__.py  container_manager.py  docker_images.py  engine.py  executor_base.py  file_handler.py  singularity_container_manager.py
src/coala_runtime/tools/: __init__.py  python_executor.py  r_executor.py
src/coala_runtime/utils/: output_parser.py
tests/: README.md  test_build_cli.py  test_docker_images.py  test_engine.py  test_execution_errors.py  test_executor_models.py  test_main_cli.py  test_prune_install_list.py  test_python_executor_install.py  test_r_executor_install.py  test_via_mcp.py
tests/scripts/: boxplot_script.py  pdf_extraction_script.py  venn_diagram_script.R
