[project]
name = "coala-runtime"
version = "0.1.0"
description = "MCP server for executing Python and R scripts in containerized environments"
readme = "README.md"
license = "MIT"
authors = [{ name = "Qiang" }]
requires-python = ">=3.11"
keywords = ["mcp", "docker", "python", "r", "containers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0.0",
    "docker>=7.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
coala-runtime = "coala_runtime.__main__:main"

[project.urls]
Homepage = "https://github.com/coala-info/coala-runtime"
Repository = "https://github.com/coala-info/coala-runtime"
Issues = "https://github.com/coala-info/coala-runtime/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
